[package]
name = "tari_dan_app_utilities"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_core = { workspace = true, default-features = false, features = ["transactions"] }
tari_crypto = { workspace = true }
tari_shutdown = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_state_store_sqlite = { workspace = true }
tari_dan_engine = { workspace = true }
tari_dan_storage = { workspace = true }
tari_dan_storage_sqlite = { workspace = true }
tari_engine_types = { workspace = true }
tari_epoch_manager = { workspace = true, features = ["base_layer"] }
tari_base_node_client = { workspace = true }
tari_template_builtin = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_bor = { workspace = true, default-features = true }
tari_indexer_lib = { workspace = true }
tari_networking = { workspace = true }
tari_validator_node_rpc = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
cacache = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true }
json5 = { workspace = true }
libp2p-identity = { workspace = true }
log = { workspace = true, features = ["std"] }
mini-moka = { workspace = true }
multiaddr = { workspace = true }
std-semaphore = { workspace = true }
prost = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "default",
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
] }
tokio-stream = { workspace = true, features = ["sync"] }
config = { workspace = true }
