[package]
name = "tari_dan_wallet_cli"
description = "The Tari DAN wallet CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_dan_engine = { workspace = true }
tari_engine_types = { workspace = true }
tari_utilities = { workspace = true }
tari_wallet_daemon_client = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_transaction_manifest = { workspace = true }
tari_bor = { workspace = true }
# Needed for VersionedSubstateAddress
tari_dan_wallet_sdk = { workspace = true }

anyhow = "1.0.65"
base64 = "0.20.0-alpha.1"
clap = { version = "3.2.22", features = ["derive", "env"] }
log = "0.4.17"
multiaddr = "0.14.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde_json = "1.0"
time = "0.3.15"
thiserror = "1.0.36"
tokio = { version = "1", features = ["macros"] }
url = "2.3.1"
