[package]
name = "tari_dan_wallet_cli"
description = "The Tari DAN wallet CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_dan_engine = { workspace = true }
tari_engine_types = { workspace = true }
tari_utilities = { workspace = true }
tari_wallet_daemon_client = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_transaction_manifest = { workspace = true }
tari_bor = { workspace = true, default-features = true }
# Needed for VersionedSubstateId
tari_dan_wallet_sdk = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
multiaddr = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["macros"] }
url = { workspace = true }
