[package]
name = "tari_dan_wallet_daemon"
authors = ["The Tari Development Community"]
description = "The Tari DAN wallet daemon"
repository = "https://github.com/tari-project/tari-dan"
license = "BSD-3-Clause"
version = "0.50.0-pre.0"
edition = "2021"

[dependencies]
tari_app_utilities = { git = "https://github.com/tari-project/tari.git", tag = "v0.51.0-pre.3", package = "tari_app_utilities" }
tari_common = { git = "https://github.com/tari-project/tari.git", tag = "v0.51.0-pre.3" }
tari_crypto = { version = "0.17" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", tag = "v0.51.0-pre.3" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", tag = "v0.51.0-pre.3" }
tari_dan_wallet_sdk = { path = "../../dan_layer/wallet/sdk" }
tari_dan_wallet_storage_sqlite = { path = "../../dan_layer/wallet/storage_sqlite" }
tari_transaction = { path = "../../dan_layer/transaction" }
tari_dan_common_types = { path = "../../dan_layer/common_types" }
tari_engine_types = { path = "../../dan_layer/engine_types" }
tari_utilities = "0.4.10"
tari_wallet_daemon_client = { path = "../../clients/wallet_daemon_client" }
tari_template_builtin = { path = "../../dan_layer/template_builtin" }
# TODO: Ideally we should not have to include the WASM template lib, we should perhaps extract the address types into a separate crate (e.g. template_types)
tari_template_lib = { path = "../../dan_layer/template_lib" }
tari_indexer_client = { path = "../../clients/tari_indexer_client" }

anyhow = "1.0.69"
axum = { version = "0.6", features = ["headers"] }
axum-jrpc = { version = "0.3.2", features = ["anyhow_error"] }
base64 = "0.20.0-alpha.1"
clap = { version = "3.2.22", features = ["derive", "env"] }
config = "0.13.0"
humantime-serde = "1.1.1"
futures = "0.3.26"
log = "0.4.17"
rand = "0.7"
reqwest = "0.11.16"
serde = "1.0.152"
serde_json = "1.0.92"
thiserror = "1.0.38"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tower-http = { version = "0.3.5", default-features = false, features = ["cors", "trace"] }
webrtc = "0.7.1"

libsqlite3-sys = { version = "0.25", features = ["bundled"] }
log4rs = { version = "1.1.1", features = ["rolling_file_appender", "compound_policy", "size_trigger", "fixed_window_roller"] }

[dev-dependencies]
tari_utilities = "0.4.10"

[package.metadata.cargo-machete]
ignored = [
    # We want to bundle this lib
    "libsqlite3-sys",
    # Want to enable some log4rs features
    "log4rs",
]
