[package]
name = "tari_dan_wallet_daemon"
description = "The Tari DAN wallet daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
minotari_app_utilities = { workspace = true }
tari_common = { workspace = true }
tari_crypto = { workspace = true }
tari_common_types = { workspace = true }
tari_shutdown = { workspace = true }
tari_dan_wallet_sdk = { workspace = true }
tari_dan_wallet_storage_sqlite = { workspace = true }
tari_transaction = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_engine_types = { workspace = true }
tari_wallet_daemon_client = { workspace = true }
tari_template_builtin = { workspace = true }
# TODO: Ideally we should not have to include the WASM template lib, we should perhaps extract the address types into a separate crate (e.g. template_types)
tari_template_lib = { workspace = true }
tari_indexer_client = { workspace = true }

anyhow = "1.0.69"
axum = { version = "0.6", features = ["headers"] }
axum-jrpc = { version = "0.3.2", features = ["anyhow_error"] }
base64 = "0.20.0-alpha.1"
clap = { version = "3.2.22", features = ["derive", "env"] }
config = "0.13.0"
humantime-serde = "1.1.1"
futures = "0.3.26"
include_dir = "0.7.2"
log = "0.4.17"
rand = "0.8"
reqwest = "0.11.16"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.38"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tower-http = { version = "0.3.5", default-features = false, features = [
    "cors",
    "trace",
] }
webrtc = "0.9.0"

libsqlite3-sys = { version = "0.25", features = ["bundled"] }
log4rs = { version = "1.1.1", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
    "console_appender",
] }
mime_guess = "2.0.4"
url = "2.4.1"

[dev-dependencies]
tari_utilities = "0.6"

[package.metadata.cargo-machete]
ignored = [
    # We want to bundle this lib
    "libsqlite3-sys",
    # Want to enable some log4rs features
    "log4rs",
]
