[package]
name = "tari_generate"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_engine = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
convert_case = { workspace = true }
hex = { workspace = true }
liquid = { workspace = true }
liquid-core = { workspace = true }
reqwest = { workspace = true, features = ["multipart", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
