[package]
name = "tari_indexer"
authors = ["The Tari Development Community"]
description = "The Tari DAN indexer implementation"
repository = "https://github.com/tari-project/tari-dan"
license = "BSD-3-Clause"
version = "0.1.1"
edition = "2021"

[dependencies]
minotari_app_utilities = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_comms = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_comms_logging = { path = "../../comms/tari_comms_logging" }
tari_crypto = "0.19"
tari_p2p = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_shutdown = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_storage = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }

tari_bor = { path = "../../dan_layer/tari_bor" }
tari_dan_app_utilities = { path = "../tari_dan_app_utilities" }
tari_dan_common_types = { path = "../../dan_layer/common_types" }
tari_base_node_client = { path = "../../clients/base_node_client" }
tari_dan_engine = { path = "../../dan_layer/engine" }
tari_dan_storage = { path = "../../dan_layer/storage" }
tari_dan_storage_sqlite = { path = "../../dan_layer/storage_sqlite" }
tari_state_store_sqlite = { path = "../../dan_layer/state_store_sqlite" }
tari_epoch_manager = { path = "../../dan_layer/epoch_manager" }
tari_engine_types = { path = "../../dan_layer/engine_types" }
tari_indexer_client = { path = "../../clients/tari_indexer_client" }
tari_indexer_lib = { path = "../../dan_layer/indexer_lib" }
tari_template_lib = { path = "../../dan_layer/template_lib" }
tari_transaction = { path = "../../dan_layer/transaction" }
tari_validator_node_rpc = { path = "../../dan_layer/validator_node_rpc" }
tari_dan_p2p = { path = "../../dan_layer/p2p" }

anyhow = "1.0.53"
async-trait = "0.1"
axum = "0.6.0"
async-graphql = "5.0.7"
async-graphql-axum = "5.0.7"
axum-jrpc = { version = "0.3.2", features = ["anyhow_error"] }
clap = { version = "3.2.22", features = ["derive", "env"] }
config = "0.13.0"
diesel = { version = "2", default-features = false, features = [
    "sqlite",
    "chrono",
] }
diesel_migrations = "2"
futures = { version = "^0.3.1" }
include_dir = "0.7.2"
lmdb-zero = "0.4.4"
log = { version = "0.4.8", features = ["std"] }
log4rs = { version = "1.1.1", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
prost = "0.9"
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "^1.0.20"
tokio = { version = "1.10", features = [
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
] }
tonic = "0.6.2"
tower = "0.4"
tower-layer = "0.3"
tower-http = { version = "0.3.0", features = ["cors"] }
mime_guess = "2.0.4"

[package.metadata.cargo-machete]
ignored = [
    # Want to enable some log4rs features
    "log4rs",
]
