[package]
name = "tari_indexer"
description = "The Tari DAN indexer implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
minotari_app_utilities = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_comms = { workspace = true }
tari_comms_logging = { workspace = true }
tari_crypto = { workspace = true }
tari_p2p = { workspace = true }
tari_shutdown = { workspace = true }
tari_storage = { workspace = true }

tari_bor = { workspace = true }
tari_dan_app_utilities = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_base_node_client = { workspace = true }
tari_dan_engine = { workspace = true }
tari_dan_storage = { workspace = true }
tari_dan_storage_sqlite = { workspace = true }
tari_state_store_sqlite = { workspace = true }
tari_epoch_manager = { workspace = true }
tari_engine_types = { workspace = true }
tari_indexer_client = { workspace = true }
tari_indexer_lib = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_validator_node_rpc = { workspace = true }
tari_dan_p2p = { workspace = true }

anyhow = "1.0.53"
async-trait = "0.1"
axum = "0.6.0"
async-graphql = "5.0.7"
async-graphql-axum = "5.0.7"
axum-jrpc = { version = "0.3.2", features = ["anyhow_error"] }
clap = { version = "3.2.22", features = ["derive", "env"] }
config = "0.13.0"
diesel = { version = "2", default-features = false, features = [
    "sqlite",
    "chrono",
] }
diesel_migrations = "2"
futures = { version = "^0.3.1" }
include_dir = "0.7.2"
lmdb-zero = "0.4.4"
log = { version = "0.4.8", features = ["std"] }
log4rs = { version = "1.1.1", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
prost = "0.9"
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "^1.0.20"
tokio = { version = "1.10", features = [
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
] }
tonic = "0.6.2"
tower = "0.4"
tower-layer = "0.3"
tower-http = { version = "0.3.0", features = ["cors"] }
mime_guess = "2.0.4"

[package.metadata.cargo-machete]
ignored = [
    # Want to enable some log4rs features
    "log4rs",
]
