[package]
name = "tari_scaffolder"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_engine = { workspace = true }

clap = { workspace = true }
liquid = { workspace = true }
convert_case = { workspace = true }
