[package]
name = "tari_scaffolder"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_engine = { workspace = true }

clap = { workspace = true }
liquid = { workspace = true }
liquid-core = "0.26.4"
convert_case = { workspace = true }
