[package]
name = "tari_scaffolder"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_dan_engine = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
liquid = { workspace = true }
liquid-core = "0.26.4"
convert_case = { workspace = true }
serde_json = "1.0.108"
serde = { version = "1.0.195", features = ["derive"] }
