[package]
name = "tari_signaling_server"
description = "WebRTC signaling server implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common = { workspace = true }
tari_shutdown = { workspace = true }
tari_dan_wallet_sdk = { workspace = true }
tari_dan_common_types = { workspace = true }

anyhow = "1.0.69"
axum = { version = "0.6", features = ["headers"] }
axum-jrpc = { version = "0.3.2", features = ["anyhow_error"] }
clap = { version = "4.1.4", features = ["derive", "env"] }
dirs = "4.0.0"
log = "0.4.17"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tower-http = { version = "0.3.5", default-features = false, features = ["cors", "trace"] }
jsonwebtoken = "8.3.0"
chrono = "0.4.24"
webrtc = "0.9.0"

