[package]
name = "tari_signaling_server"
description = "WebRTC signaling server implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common = { workspace = true }
tari_shutdown = { workspace = true }
tari_dan_wallet_sdk = { workspace = true }
tari_dan_common_types = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true, features = ["headers"] }
axum-jrpc = { workspace = true, features = ["anyhow_error"] }
# if we set clap version 4 in the workspace it would break other crates
clap = { version = "4.1.4", features = ["derive", "env"] }
dirs = { workspace = true }
log = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["default", "rt-multi-thread", "macros", "time"] }
tower-http = { workspace = true, default-features = false, features = ["cors", "trace"] }
jsonwebtoken = { workspace = true }
chrono = { workspace = true }
webrtc = { workspace = true }

