[package]
name = "tari_validator_node"
description = "The Tari validator node implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
minotari_app_grpc = { workspace = true }
minotari_app_utilities = { workspace = true }
minotari_wallet_grpc_client = { workspace = true }
tari_common = { workspace = true }
tari_common_types = {workspace = true }
tari_comms = { workspace = true }
tari_comms_logging = { workspace = true }
tari_core = { workspace = true, default-features = false, features = ["transactions"] }
tari_crypto = { workspace = true }
tari_validator_node_rpc = { workspace = true }
tari_dan_app_utilities = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_dan_p2p = { workspace = true }
tari_dan_engine = { workspace = true }
tari_dan_storage = { workspace = true }
tari_dan_storage_sqlite = { workspace = true }
tari_engine_types = { workspace = true }
tari_p2p = { workspace = true }
tari_shutdown = { workspace = true }
tari_storage = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_base_node_client = { workspace = true }
tari_epoch_manager = { workspace = true, features = ["base_layer"] }
tari_indexer_lib = { workspace = true }
tari_comms_rpc_state_sync = {workspace = true }
tari_bor = { workspace = true }
tari_consensus = { workspace = true }
tari_state_store_sqlite = { workspace = true }

anyhow = "1.0.53"
async-trait = "0.1.50"
axum = "0.6.0"
axum-jrpc = { version = "0.3.2", features = ["anyhow_error"] }
blake2 = "0.10"
clap = { version = "3.2.5", features = ["env"] }
config = "0.13.0"
futures = { version = "^0.3.1" }
include_dir = "0.7.2"
indexmap = "2.0.0"
json5 = "0.2.2"
libsqlite3-sys = { version = "0.25", features = ["bundled"] }
lmdb-zero = "0.4.4"
log = { version = "0.4.8", features = ["std"] }
log4rs = { version = "1.1.1", features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
prost = "0.9"
rand = "0.8"
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "^1.0.20"
time = "0.3.15"
tokio = { version = "1.10", features = [
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
] }
tonic = "0.6.2"
tower = "0.4"
tower-http = { version = "0.3.0", features = ["cors"] }
tower-layer = "0.3"
mime_guess = "2.0.4"

[build-dependencies]
tari_common = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2", package = "tari_common", features = [
    "build",
] }

[package.metadata.cargo-machete]
ignored = [
    # We want to bundle this lib
    "libsqlite3-sys",
    # Want to enable some log4rs features
    "log4rs",
]
