[package]
name = "tari_validator_node"
description = "The Tari validator node implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[features]
default = ["metrics"]
metrics = ["prometheus"]

[dependencies]
minotari_app_grpc = { workspace = true }
minotari_app_utilities = { workspace = true }
minotari_wallet_grpc_client = { workspace = true }
tari_common = { workspace = true }
tari_common_types = { workspace = true }
tari_core = { workspace = true, default-features = false, features = [
    "transactions",
] }
tari_crypto = { workspace = true }
tari_validator_node_rpc = { workspace = true }
tari_dan_app_utilities = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_dan_p2p = { workspace = true }
tari_dan_engine = { workspace = true }
tari_dan_storage = { workspace = true }
tari_dan_storage_sqlite = { workspace = true }
tari_engine_types = { workspace = true }
tari_shutdown = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_base_node_client = { workspace = true }
tari_epoch_manager = { workspace = true, features = ["base_layer"] }
tari_indexer_lib = { workspace = true }
tari_rpc_state_sync = { workspace = true }
tari_bor = { workspace = true, default-features = true }
tari_consensus = { workspace = true }
tari_state_store_sqlite = { workspace = true }
tari_networking = { workspace = true }
tari_rpc_framework = { workspace = true }
sqlite_message_logger = { workspace = true }

libp2p = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-jrpc = { workspace = true, features = ["anyhow_error"] }
blake2 = { workspace = true }
clap = { workspace = true, features = ["env"] }
config = { workspace = true }
futures = { workspace = true }
include_dir = { workspace = true }
indexmap = { workspace = true }
json5 = { workspace = true }
libsqlite3-sys = { workspace = true, features = ["bundled"] }
log = { workspace = true, features = ["std"] }
log4rs = { workspace = true, features = [
    "rolling_file_appender",
    "compound_policy",
    "size_trigger",
    "fixed_window_roller",
] }
mime_guess = { workspace = true }
prometheus = { workspace = true, optional = true }
prost = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true, features = ["default", "derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = [
    "default",
    "macros",
    "time",
    "sync",
    "rt-multi-thread",
] }
tonic = { workspace = true }
tower-http = { workspace = true, features = ["default", "cors"] }

[build-dependencies]
tari_common = { workspace = true, features = ["build"] }

[package.metadata.cargo-machete]
ignored = [
    # We want to bundle this lib
    "libsqlite3-sys",
    # Want to enable some log4rs features
    "log4rs",
]

[features]
ts = [] # this is just for the build script to skip the build
