[package]
name = "tari_validator_node_cli"
authors = ["The Tari Development Community"]
description = "The Tari validator node CLI"
repository = "https://github.com/tari-project/tari-dan"
license = "BSD-3-Clause"
version = "0.0.3"
edition = "2021"

[dependencies]
tari_common_types = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_crypto = "0.19"
tari_dan_common_types = { path = "../../dan_layer/common_types" }
tari_dan_engine = { path = "../../dan_layer/engine" }
tari_engine_types = { path = "../../dan_layer/engine_types" }
tari_template_builtin = { path = "../../dan_layer/template_builtin" }
tari_template_lib = { path = "../../dan_layer/template_lib" }
tari_transaction = { path = "../../dan_layer/transaction" }
tari_transaction_manifest = { path = "../../dan_layer/transaction_manifest" }
tari_validator_node_client = { path = "../../clients/validator_node_client" }
tari_dan_storage = { path = "../../dan_layer/storage" }

anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive", "env"] }
cargo_metadata = "0.15.3"
dirs = "4.0.0"
jfs = "0.7.1"
log = "0.4.17"
multiaddr = "0.14.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.36"
time = "0.3.15"
tokio = { version = "1", features = ["macros", "time"] }
