[package]
name = "tari_validator_node_cli"
description = "The Tari validator node CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_crypto = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_dan_engine = { workspace = true }
tari_engine_types = { workspace = true }
tari_template_builtin = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_transaction_manifest = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_dan_storage = { workspace = true }

anyhow = "1.0.65"
clap = { version = "3.2.22", features = ["derive", "env"] }
cargo_metadata = "0.15.3"
dirs = "4.0.0"
jfs = "0.7.1"
log = "0.4.17"
multiaddr = "0.14.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0.36"
time = "0.3.15"
tokio = { version = "1", features = ["macros", "time"] }
