[package]
name = "tari_validator_node_cli"
description = "The Tari validator node CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_common_types = { workspace = true }
tari_crypto = { workspace = true }
tari_dan_common_types = { workspace = true }
tari_dan_engine = { workspace = true }
tari_engine_types = { workspace = true }
tari_template_builtin = { workspace = true }
tari_template_lib = { workspace = true }
tari_transaction = { workspace = true }
tari_transaction_manifest = { workspace = true }
tari_validator_node_client = { workspace = true }
tari_dan_storage = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
cargo_metadata = { workspace = true }
dirs = { workspace = true }
jfs = { workspace = true }
log = { workspace = true }
multiaddr = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
time = { workspace = true }
tokio = { workspace = true, features = ["default", "macros", "time"] }
