[package]
name = "tari_vn_grpc"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari"
license = "BSD-3-Clause"
version = "0.35.0"
edition = "2018"

[dependencies]
tari_common_types = {git = "https://github.com/tari-project/tari.git", tag = "v0.35.0", package = "tari_common_types"}
tari_crypto = { git = "https://github.com/tari-project/tari-crypto.git", tag = "v0.15.4" }
tari_utilities = { git = "https://github.com/tari-project/tari_utilities.git", tag = "v0.4.5" }

chrono = { version = "0.4.19", default-features = false }
prost = "0.9"
prost-types = "0.9"
num-traits = "0.2.15"
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"

