[package]
name = "tari_watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

minotari_wallet_grpc_client = { workspace = true }
minotari_node_grpc_client = { workspace = true }
minotari_app_grpc = { workspace = true }
tari_common = { workspace = true }
tari_shutdown = { workspace = true }
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "process",
    "time",
    "fs",
    "io-util",
] }
log = { workspace = true }
fern = { workspace = true, features = ["colored"] }
tonic = { workspace = true }

toml = "0.8.12"
humantime = "2.1.0"
